--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<div class="footer-inner">
-		<p>Written by <a href="http://adamsilver.io">Adam Silver</a>. Designing simple and inclusive websites. <a href="http://github.com/adamsilver/maintainablecss.com/">Contribute on Github</a>.</p>
+		<p>Written by <a href="http://adamsilver.io">Adam Silver</a>, an interaction designer from London, UK. <a href="http://github.com/adamsilver/maintainablecss.com/">Contribute on Github</a>.</p>
 	</div>
 </footer>
