--- a/assets/_sass/_footer.scss
+++ b/assets/_sass/_footer.scss
@@ -9,10 +9,10 @@
 }
 
 .footer p {
-	color: #222;
+	color: $colour-black;
 	font-size: 0.94em;
 }
 
 .footer a {
-	color: #222;
+	color: $colour-black;
 }
