--- a/assets/_sass/_header.scss
+++ b/assets/_sass/_header.scss
@@ -4,7 +4,7 @@
 
 .header-inner {
 	overflow: hidden;
-	padding: 20px;
+	padding: $spacing-scale-2 $spacing-scale-3;
 	max-width: 700px;
 	margin: 0 auto;
 }
