Added some space and type

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
-<nav class="navigation">
+<nav class="nav">
 	<ul>
-		<li><a class="{% if page.id == "home" %}navigation-isActive{% endif%}" href="/">Home</a></li>
-		<li><a class="{% if page.id == "chapters" %}navigation-isActive{% endif%}" href="/chapters/">Chapters</a></li>
+		<li><a class="{% if page.id == "home" %}nav-isActive{% endif%}" href="/">Home</a></li>
+		<li><a class="{% if page.id == "chapters" %}nav-isActive{% endif%}" href="/chapters/">Chapters</a></li>
 	</ul>
 </nav>
