--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,8 +2,10 @@
 ---
 
 @import "colours";
-@import "space";
+@import "utilities";
+@import "spacing";
 @import "fonts";
+@import "typography";
 @import "reset";
 @import "generic";
 @import "buttons";
