--- a/assets/_sass/_generic.scss
+++ b/assets/_sass/_generic.scss
@@ -2,7 +2,8 @@ body {
 	font-family: 'Open sans', helvetica, arial, sans-serif;
   text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
-  font-size: 100%;
+	font-size: 100%;
+	border-top: 6px solid $colour-purple;
 }
 
 a:link,
