--- a/assets/_sass/_generic.scss
+++ b/assets/_sass/_generic.scss
@@ -1,9 +1,8 @@
 body {
-	font-family: 'Open sans', helvetica, arial, sans-serif;
+	font-family: 'Roboto', helvetica, arial, sans-serif;
   text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	font-size: 100%;
-	border-top: 6px solid $colour-purple;
 }
 
 a:link,
